Nome, matrícula e imagem

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,9 @@
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
+    <strong>Matheus Almeida de Oliveira</strong>
+    <p>Matrícula: 22105648</p>
+    <img src="" alt="Eu">
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
