Integração com o apk android

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,7 +15,7 @@
 
   <div id="container">
     <strong>Matheus Almeida de Oliveira</strong>
-    <p>Matrícula: 22105648</p>
+    <p>Desenvolvimento de Aplicativos Mobile [PAS23103|BS|M|ADS0301M]</p>
     <img src="https://upload.wikimedia.org/wikipedia/pt/d/df/Sonic_1991.png" alt="Eu">
     <!-- <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p> -->
   </div>
