Mudando style do app

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,42 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      ⚡🌌 Sonic Mania 🌌⚡
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="content">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
+  <!-- <div id="container">
     <strong>Matheus Almeida de Oliveira</strong>
     <p>Desenvolvimento de Aplicativos Mobile [PAS23103|BS|M|ADS0301M]</p>
     <img src="https://upload.wikimedia.org/wikipedia/pt/d/df/Sonic_1991.png" alt="Eu">
-    <!-- <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p> -->
+    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  </div> -->
+
+  <div class="content">
+    <ion-card>
+      <div class="center-img">
+        <img alt="Eu" src="https://upload.wikimedia.org/wikipedia/pt/d/df/Sonic_1991.png"/>
+      </div>
+
+      <div class="card">
+        <ion-card-header class="card-header">
+          <ion-card-title>Matheus Almeida de Oliveira</ion-card-title>
+          <ion-card-subtitle>Desenvolvimento de Aplicativos Mobile [PAS23103|BS|M|ADS0301M]</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero modi ea pariatur? Assumenda, nisi quisquam!
+        </ion-card-content>
+      </div>
+      
+    </ion-card>
   </div>
 </ion-content>
