Atualização do style do app

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,7 +27,7 @@
       </div>
 
       <div class="card">
-        <ion-card-header class="card-header">
+        <ion-card-header>
           <ion-card-title>Matheus Almeida de Oliveira</ion-card-title>
           <ion-card-subtitle>Desenvolvimento de Aplicativos Mobile [PAS23103|BS|M|ADS0301M]</ion-card-subtitle>
         </ion-card-header>
