--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -17,8 +17,6 @@
   font-size: 16px;
   line-height: 22px;
 
-  color: #8c8c8c;
-
   margin: 0;
 }
 
@@ -31,8 +29,6 @@
   justify-content: center;
   align-items: top;
   height: 100%;
-  color: black;
-  font-weight: 800;
 }
 
 .card {
@@ -40,23 +36,47 @@
   flex-direction: column;
   justify-content: center;
   align-items: top;
-  color: black;
+  width: 330px;
   font-weight: 800;
 }
 
-.center-container {
+/* .center-container {
   width: 100%;
   display: flex;
   justify-content: center;
-}
+} */
 
-.center-card {
+/* .center-card {
   max-width: 400px;
   width: 100%;
-}
+} */
 
 .center-img {
   display: flex;
   justify-content: center;
   width: 100%;
+  height: 265px;
+}
+
+ion-card {
+  border-radius: 15px;
+  background-color: rgb(183, 255, 255);
+}
+
+ion-card-header {
+  font-weight: 800;
+  color: black;
+}
+
+ion-card-title {
+  font-weight: 700;
+  color: black;
+}
+
+ion-card-subtitle {
+  color: black;
+}
+
+ion-card-content {
+  font-weight: 800;
 }
