--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,7 +29,8 @@
       <div class="card">
         <ion-card-header>
           <ion-card-title>Matheus Almeida de Oliveira</ion-card-title>
-          <ion-card-subtitle>Desenvolvimento de Aplicativos Mobile [PAS23103|BS|M|ADS0301M]</ion-card-subtitle>
+          <ion-card-subtitle>Desenvolvimento de Aplicativos Mobile [PAS23103|BS|M|ADS0301M] <br>
+          Matrícula: 22105648</ion-card-subtitle>
         </ion-card-header>
       
         <ion-card-content>
